--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,81 @@
-# _config.yml
-title: Raghavi Rajumohan
+---
+layout: default
+title: "Raghavi Rajumohan"
 theme: jekyll-theme-minimal
+---
 
 description: > 
   I love uncovering insights from data and turning those stories into actionable insights.
+  
+<div class="left-column">
+  <h1>{{ site.title }}</h1>
+  <p>{{ site.description }}</p>
 
-# Timeline
-experiences:
-  - date: "Sep 2024 - Present"
-    title: "Founder & Mentor"
-    company: "Data Gals Initiative"
-  - date: "Jun 2024 - Present"
-    title: "Data Science Intern, Real Estate Practice"
-    company: "ABGi USA"
-  - date: "Jan 2024 - Mar 2024"
-    title: "Quantitative Analyst"
-    company: "Optimas Capital"
-  - date: "Aug 2023 - Sep 2023"
-    title: "Data Analyst"
-    company: "Equity Methods LLC"
+  <h2>Experiences</h2>
+  <ul class="timeline">
+    {% for experience in site.experiences %}
+      <li>
+        <span>{{ experience.date }}</span> 
+        <strong>{{ experience.title }}</strong> - {{ experience.company }}
+      </li>
+    {% endfor %}
+  </ul>
 
-social_links:
-  - title: "LinkedIn"
-    url: "https://www.linkedin.com/in/raghavi-rajumohan/"
-  - title: "GitHub"
-    url: "https://github.com/RaghaviRajumohan"
+  <h2>Connect with Me</h2>
+  <ul>
+    {% for link in site.social_links %}
+      <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+
+<style>
+/* Left Column Styling */
+.left-column {
+  width: 40%;
+  float: left;
+  padding-right: 20px;
+}
+
+/* Add styling for the timeline */
+ul.timeline {
+  list-style-type: none;
+  position: relative;
+  padding-left: 20px;
+}
+
+ul.timeline:before {
+  content: '';
+  background: #d4d9df;
+  display: inline-block;
+  position: absolute;
+  left: 20px; /* Adjust for left-aligned timeline */
+  width: 2px;
+  height: 100%;
+  z-index: 400;
+}
+
+ul.timeline > li {
+  margin: 20px 0;
+  padding-left: 40px;
+  text-align: left;
+}
+
+ul.timeline > li:before {
+  content: '';
+  background: #6e8cd4;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  left: 15px; /* Adjust for left-aligned circles */
+  width: 12px;
+  height: 12px;
+  z-index: 400;
+}
+
+/* Ensure text aligns left */
+ul.timeline > li span {
+  font-weight: bold;
+  color: #6e8cd4;
+}
+</style>
