--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,46 @@
-title: "<span style='color:#b19cd9;'>Raghavi Rajumohan</span>" 
+# Title and Description
+title: "Raghavi Rajumohan"
+description: "I love uncovering insights from data and turning those stories into actionable insights."
 
-description: > 
-  I love uncovering insights from data and turning those stories into actionable insights.
-  <br><br>
-  <strong>Experiences:</strong>
-
-  <div style="position: relative; max-width: 800px; margin: 0 auto; padding: 10px 0;"> 
+# Timeline Experiences
+experiences: > 
+  <div style="position: relative; max-width: 800px; margin: 0 auto; padding: 10px 0;">
     <!-- Experience 1 -->
-    <div style="padding: 10px 0; position: relative;"> 
-      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;"> 
+    <div style="padding: 10px 0; position: relative;">
+      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;">
         Sep 2024 - Present
       </div>
-      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;"> 
+      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;">
         <h3>Founder & Mentor - Data Gals Initiative</h3>
       </div>
     </div>
 
     <!-- Experience 2 -->
-    <div style="padding: 10px 0; position: relative;"> 
-      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;"> 
+    <div style="padding: 10px 0; position: relative;">
+      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;">
         Jun 2024 - Present
       </div>
-      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;"> 
+      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;">
         <h3>Data Science Intern, Real Estate Practice - ABGi USA</h3>
       </div>
     </div>
 
     <!-- Experience 3 -->
-    <div style="padding: 10px 0; position: relative;"> 
-      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;"> 
+    <div style="padding: 10px 0; position: relative;">
+      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;">
         Jan 2024 - Mar 2024
       </div>
-      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;"> 
+      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;">
         <h3>Quantitative Analyst - Optimas Capital</h3>
       </div>
     </div>
 
     <!-- Experience 4 -->
-    <div style="padding: 10px 0; position: relative;"> 
-      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;"> 
+    <div style="padding: 10px 0; position: relative;">
+      <div style="font-weight: bold; color: #b19cd9; float: left; width: 30%; text-align: right; padding-right: 15px; font-size: 0.9em;">
         Aug 2023 - Sep 2023
       </div>
-      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;"> 
+      <div style="padding-left: 35px; border-left: 2px solid #b19cd9; position: relative;">
         <h3>Data Analyst - Equity Methods LLC</h3>
       </div>
     </div>
@@ -58,12 +57,3 @@ social_links: >
     <img src="images/Github_icon.png" alt="GitHub" style="width:50px;height:40px;margin-right:5px;">
     Visit My GitHub
   </a>
-  <br><br>
-  <a href="https://datagals.notion.site/Data-Gals-Initiative-42992f48c28545e89f2a18802ce5d716?p=5385d7dddaa245f78271895f533d2d70&pm=c" target="_blank" style="color:#6a0dad;">
-    <img src="images/LinkedIn_Post.png" alt="Data Gals" style="width:50px;height:40px;margin-right:5px;">
-    Visit Data Gals
-  </a>
-
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-  - jekyll-remote-theme
