--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Raghavi Rajumohan"
-logo: "images/logo.png"  # Your logo image here
+logo: "Raghavi.jpg"  # Your logo image here
 description: "I love uncovering insights from data and turning those stories into actionable insights."
 
 # Experience Section in HTML Format
