--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ description: >
   <ul style="list-style-type: none; padding-left: 0;">
     <li>
       <a href="https://www.linkedin.com/in/raghavirajumohan/" style="color:#6a0dad;">
-        <img src="images/LinkedIn_icon.svg.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
+        <img src="images/linkedin.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
         LinkedIn
       </a>
     </li>
