--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "Raghavi Rajumohan"
+logo: "/images/logo.png?raw=true"  # Your photo (or logo) here
 description: >
   I love uncovering insights from data and turning those stories into actionable insights.
   <br><br>
@@ -36,15 +37,23 @@ description: >
     </div>
 
   </div>
-  <br><br>
+
+  <!-- Adjusting the space above Connect with Me -->
+  <br style="line-height: 0.1;"><br>
 
   <!-- Social Links Section -->
-  <strong>Connect with Me:</strong>
+  <strong style="margin-top: 0;">Connect with Me:</strong>
   <ul style="list-style-type: none; padding-left: 0;">
     <li>
       <a href="https://www.linkedin.com/in/raghavirajumohan/" style="color:#6a0dad;">
-        <img src="images/linkedin.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
+        <img src="images/LinkedIn_icon.svg.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
         LinkedIn
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/RaghaviRajumohan" style="color:#6a0dad;">
+        <img src="images/Github_icon.png" alt="GitHub" style="width:30px;height:30px;margin-right:5px;">
+        GitHub
       </a>
     </li>
   </ul>
