--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: "Raghavi Rajumohan"
-logo: "/images/logo.png?raw=true"  # Your photo (or logo) here
 description: >
   I love uncovering insights from data and turning those stories into actionable insights.
   <br><br>
@@ -46,14 +45,8 @@ description: >
   <ul style="list-style-type: none; padding-left: 0;">
     <li>
       <a href="https://www.linkedin.com/in/raghavirajumohan/" style="color:#6a0dad;">
-        <img src="images/LinkedIn_icon.svg.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
+        <img src="images/linkedin.png" alt="LinkedIn" style="width:30px;height:30px;margin-right:5px;">
         LinkedIn
-      </a>
-    </li>
-    <li>
-      <a href="https://github.com/RaghaviRajumohan" style="color:#6a0dad;">
-        <img src="images/Github_icon.png" alt="GitHub" style="width:30px;height:30px;margin-right:5px;">
-        GitHub
       </a>
     </li>
   </ul>
