--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Raghavi Rajumohan"
-description: >
-  I love uncovering insights from data and turning those stories into actionable insights.
+description: "I love uncovering insights from data and turning those stories into actionable insights."
+
   <br><br>
 
   <!-- Experiences Section -->
