--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Raghavi Rajumohan"
 description: >
-  I love uncovering insights from data and turning those stories into actionable insights.
+  Passionate about uncovering data insights to drive informed decisions and actionable strategies
   <br><br>
 
   <!-- Experiences Section -->
