--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Raghavi Rajumohan"
 description: >
-  Passionate about uncovering data insights to drive informed decisions and actionable strategies
+  Passionate about uncovering data insights to drive informed business decisions and actionable strategies
   <br><br>
 
   <!-- Experiences Section -->
